<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">



    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:stretchColumns="0,1"
        android:id="@+id/tableLayout">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="0.5">
            <Button
                android:id="@+id/button_quick_choice"

                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_width="0px"
                android:layout_weight="1"
                android:text="@string/button_quick_choice_text"
                android:drawableTop="@drawable/quickchoice"/>



            <Button
                android:id="@+id/button_top_ten"
                android:layout_height="fill_parent"
                android:layout_column="1"
                android:layout_width="0px"
                android:layout_weight="1"
                android:text="@string/button_top_ten_text"
                android:drawableTop="@drawable/topten"/>

        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:baselineAligned="false"
            android:layout_weight="0.5">

            <Button
                android:id="@+id/button_library"
                android:layout_height="match_parent"
                android:layout_column="0"
                android:layout_width="0px"
                android:layout_weight="1"
                android:text="@string/button_library_text"
                android:drawableTop="@drawable/atoz"/>

            <Button
                android:id="@+id/button_random"
                android:layout_height="match_parent"
                android:layout_column="1"
                android:layout_width="0px"
                android:layout_weight="1"
                android:text="@string/button_random_text"
                android:drawableTop="@drawable/allrandom"/>

        </TableRow>


    </TableLayout>

</RelativeLayout>
